
For the latest information visit project web site: 
http://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
http://issues.apache.org/cayenne/

----------------------------------
Release: 3.2M1
Date: 
----------------------------------
Changes/New Features:

CAY-1646 Synchronize tabs in Modeler between ObjEntity and DbEntity editor panes
CAY-1647 Easily switch to/from ObjEntity and DbEntity in Modeler
CAY-1717 [PATCH] Implement JDBC compatibility layer methods
CAY-1718 Remove everything deprecated in 3.1
CAY-1724 Add 'Property' class for easier and better Expression creation
CAY-1726 Expression parser support for bit operators, support for << and >>
CAY-1737 ObjectContexts listening to DataChannel events must be non-blocking
CAY-1748 IdCoder/EntityIdCoder improvements to work with ObjectIds, including temp ones
CAY-1753 remove light-superclass.vm class template
CAY-1754 Modeler suggested URL for SQLServer should start with 'jdbc:sqlserver:' instead of 'jdbc:microsoft:sqlserver:'
CAY-1759 cdbimport improvements: add 'catalog', rename 'schemaName' to 'schema'
CAY-1760 cdbimport improvements: Default adapter (if none specified) must be AutoAdapter, not JdbcAdapter 

Bug Fixes:

CAY-957 Deadlock in nested contexts
CAY-1677 Modeler: text fields discard input unless you press enter
CAY-1721 Writing blobs fails (Oracle)
CAY-1725 NullPointerException from call to removeToManyTarget
CAY-1719 Modeler - Obj Attribute Java Type editor won't focus sometimes
CAY-1729 PersistentDescriptor must have predictable property iteration order
CAY-1738 Tutorial cayenne-rop-server should be packaged as a war
CAY-1739 Cayenne ROP server resets session on every request if BASIC auth is used
CAY-1742 ObjRelationship inspector says "ObjAttribute Inspector"
CAY-1744 Unexpected read-only relationships in vertical inheritance mapping
CAY-1749 NPE on simple nested context commit
CAY-1755 FaultFailureException resolving relationships to UNIQUE non-PK columns